--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -27,6 +27,20 @@ defaults:
     shell: bash
 
 jobs:
+  # Lint job
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install markdownlint-cli
+        run: npm install -g markdownlint-cli
+      - name: Run markdownlint
+        run: markdownlint content/**/*.md
   # Build job
   build:
     runs-on: ubuntu-latest
