ci: deploy pages preview for pull requests

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -83,7 +83,6 @@ jobs:
 
   # Deployment job
   deploy:
-    if: github.event_name != 'pull_request'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -93,3 +92,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          preview: ${{ github.event_name == 'pull_request' }}
