--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -2,15 +2,15 @@
 name: Deploy Hugo site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Production deployments on pushes to the default branch
   push:
     branches: ["main"]
 
-  # Runs on pull requests targeting the default branch
+  # Pull requests deploy a preview instead of the production site
   pull_request:
     branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Manual trigger for production deployments from the Actions tab
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
@@ -93,4 +93,5 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
         with:
+          # PRs deploy preview environments; pushes and manual runs go to production
           preview: ${{ github.event_name == 'pull_request' }}
