--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -45,6 +45,16 @@ jobs:
         run: npm install -g markdownlint-cli
       - name: Run markdownlint
         run: markdownlint content/**/*.md
+  # Spellcheck job
+  spellcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install codespell
+        run: pip install codespell
+      - name: Run codespell
+        run: codespell content
   # Build job
   build:
     runs-on: ubuntu-latest
